--- a/example/main-viewport.css
+++ b/example/main-viewport.css
@@ -1,37 +1,51 @@
+/* viewport-width: 750 */
 .class {
-  margin: -3.125vw .5vh;
-  padding: 5vmin 2.96875vw 1px;
-  border: 0.9375vw solid black;
+  margin: 1.33333vw .5vh;
+  padding: 5vmin 1.26667vw 1px;
+  border: 0.4vw solid black;
   border-bottom-width: 1px;
-  font-size: 4.375vw;
-  line-height: 6.25vw;
+  font-size: 1.86667vw;
+  line-height: 2.66667vw;
 }
 .class2 {
   border: 1px solid black;
   margin-bottom: 1px;
-  font-size: 6.25vw;
-  line-height: 9.375vw;
+  font-size: 2.66667vw;
+  line-height: 4vw;
 }
 @media (min-width: 750px) {
+  /* viewport-width: 375 */
   .class3 {
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 2.66667vw;
+    /* viewport-width: 750 */
+    line-height: 2.66667vw;
   }
 }
 
 .class4-ignore::before {
   content: '';
   width: 10px;
-  padding: 3.125vw;
+  padding: 1.33333vw;
   height: 10px;
   border: solid 2px #000;
 }
 .class5-bad-ignore {
   /* px-to-viewport-ignore */
-  width: 3.125vw;
+  width: 1.33333vw;
   /* px-to-viewport-ignore */
-  height: 3.125vw;
+  height: 1.33333vw;
   /* px-to-viewport-ignore-next */
+}
+
+
+/* viewport-width: 375 */
+.class6 {
+  margin: 2.66667vw .5vh;
+  padding: 5vmin 2.53333vw 1px;
+  border: 0.8vw solid black;
+  border-bottom-width: 1px;
+  font-size: 3.73333vw;
+  line-height: 5.33333vw;
 }
 
 @keyframes move {
@@ -40,10 +54,10 @@
   }
   /* px-to-viewport-ignore-next */
   50% {
-    transform: translate(10px, -10px);
+    transform: translate(2.66667vw, -2.66667vw);
   }
   100% {
-    transform: translate(10px, -10px); /* px-to-viewport-ignore */
+    transform: translate(10px, -10px);
   }
 }
 
