--- a/example/main.css
+++ b/example/main.css
@@ -1,5 +1,6 @@
+/* viewport-width: 750 */
 .class {
-  margin: -10px .5vh;
+  margin: 10px .5vh;
   padding: 5vmin 9.5px 1px;
   border: 3px solid black;
   border-bottom-width: 1px;
@@ -13,9 +14,11 @@
   line-height: 30px;
 }
 @media (min-width: 750px) {
+  /* viewport-width: 375 */
   .class3 {
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 10px;
+    /* viewport-width: 750 */
+    line-height: 10px;
   }
 }
 
@@ -33,6 +36,17 @@
   /* px-to-viewport-ignore */
   height: 10px;
   /* px-to-viewport-ignore-next */
+}
+
+
+/* viewport-width: 375 */
+.class6 {
+  margin: 10px .5vh;
+  padding: 5vmin 9.5px 1px;
+  border: 3px solid black;
+  border-bottom-width: 1px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 @keyframes move {
